--- a/server/.env-readonly
+++ b/server/.env-readonly
@@ -1,1 +1,1 @@
-MONGODB_URL=mongodb+srv://dbReadOnlyUser:jelly1234@cluster0.vvqav.mongodb.net/MERN-STARTER-DB?retryWrites=true&w=majority
+MONGODB_URL=mongodb://localhost:27017/c6Superheroes
